Fix dark mode table heading

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,7 +30,7 @@
             color: rgb(217, 119, 6);
         }
 
-        .prose h1, .prose h2, .prose h3 {
+        .prose h1, .prose h2, .prose h3, .prose thead {
             color: hsl(220, 39.3%, 89%);
         }
 
